worked on the hero_section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                     <a href="http://">Contact Us</a>
                 </div>
             </nav>
+
+            <div class="hero_section">
+                <h1 class="hero_text">Your partner in problem-solving through design</h1>
+                <h3 class="hero_subtext">We provide design solutions that let you control your brand's image</h3>
+                <a href="" class="header_btn">Get started_</a>
+            </div>
         </header>
     </div>
 </body>
