added the 3rd section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <link href="Fixedsys62.ttf" rel="stylesheet" type="text/css">
-
 </head>
 <body>
     <div class="container">
@@ -37,10 +36,47 @@
         <!-- Section 2 -->
         <div class="section2">
             <h2 class="section2_heading">Are you struggling to attract and retain clients?<br>Do you feel like your branding materials aren't effectively representing your message and values?</h2>
-            <p class="section2_subtext">Our team can help you create a cohesive and impactful brand that resonates with your target audience and sets you apart from the competition."</p>
+            <p class="section2_subtext">Our team can help you create a cohesive and impactful brand that resonates with your target audience and sets you apart from the competition.</p>
             <a href="" class="btn secondary_cta">Get started_</a>
         </div>
 
+        <!-- Section 3 -->
+        <div class="section3">
+             <h5>Why Work With Us_</h5>
+             <div class="card-container" id="card-container">
+                <div class="flxbx card">
+                    <div class="img_bx">
+                        <img src="CAD_1.png" alt="">
+                    </div>
+                    <div class="txt_bx">
+                        <h2 class="card_title">Take Control. </h2>
+                        <p class="card_p">Keep up to date with your project's progress. At our CtrAltDel, we prioritize delivering exceptional products and services to you, all while maintaining a personalized level of support and quick response times. You're always in the driver's seat.</p>
+                    </div>
+                </div>
+
+                <div class="flxbx card">
+                        <div class="img_bx">
+                            <img src="CAD_2.png" alt="">
+                        </div>
+                        <div class="txt_bx">
+                            <h2 class="card_title">Alternate. </h2>
+                            <p class="card_p">Find the perfect solution for your brand. No matter your budget, we have options that can be tailored to your specific requirements. Let us help you create a cohesive and effective brand identity that truly represents your business.</p>
+                        </div>
+                </div>
+
+                 <div class="flxbx card">
+                            <div class="img_bx">
+                                <img src="CAD_3.png" alt="">
+                            </div>
+                            <div class="txt_bx">
+                                <h2 class="card_title">Delete.</h2>
+                                <p class="card_p">Your time and resources are valuable, and we know that. That's why we have streamlined our processes to eliminate unnecessary meetings and interactions. And with no hidden fees or charges, you can trust that you're getting the best value for your investment.</p>
+                            </div>
+                </div>
+                </div>
+        </div>
+
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
