still not final

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
 
         <!-- Header -->
-        <header>
+        <header id="top">
             <nav>
                 <div class="main_nav">
                     <a href="http://">Why Work With Us</a>
@@ -23,6 +23,9 @@
                 <div class="main_nav">
                     <a href="http://">Portfolio</a>
                     <a href="http://">Contact Us</a>
+                </div>
+                <div class="mobileIcon">
+                    <img src="./picture/headerImg/List.png" alt="">
                 </div>
             </nav>
 
@@ -43,10 +46,10 @@
         </div>
 
         <!-- Section 3 -->
-        <!-- <div class="section3">
+        <div class="section3">
              <h5>Why Work With Us_</h5>
              <div class="card-container" id="card-container">
-                <div class=" card-1-container flxbx card">
+                <div class="card active">
                     <div class="img_bx">
                         <img src="CAD_1.png" alt="">
                     </div>
@@ -55,8 +58,7 @@
                         <p class="card_p">Keep up to date with your project's progress. At our CtrAltDel, we prioritize delivering exceptional products and services to you, all while maintaining a personalized level of support and quick response times. You're always in the driver's seat.</p>
                     </div>
                 </div>
-
-                <div class="card-2-container flxbx card">
+                <div class="card">
                         <div class="img_bx">
                             <img src="CAD_2.png" alt="">
                         </div>
@@ -65,8 +67,7 @@
                             <p class="card_p">Find the perfect solution for your brand. No matter your budget, we have options that can be tailored to your specific requirements. Let us help you create a cohesive and effective brand identity that truly represents your business.</p>
                         </div>
                 </div>
-
-                 <div class=" card-3-container flxbx card">
+                <div class="card">
                             <div class="img_bx">
                                 <img src="CAD_3.png" alt="">
                             </div>
@@ -76,8 +77,8 @@
                             </div>
 
                 </div>
-                </div>
-        </div> -->
+            </div>
+        </div>
 
         <!-- Services -->
         <div class="services">
@@ -87,8 +88,7 @@
                      <h1 class="list_item" style="color:#ffffff;"> Branding.</h1>
                      <h1 class="list_item" style="color:rgba(250, 250, 250, 0.64);">Web Development.</h1>
                      <h1 class="list_item" style="color:#ffffff;">Social Media Management.</h1>
-                     <h1 class="list_item" style="color:rgba(250, 250, 250, 0.64);">Product Design.</h1>
-                     
+                     <h1 class="list_item" style="color:rgba(250, 250, 250, 0.64);">Product Design.</h1> 
                 </div>
                 
             </div>
@@ -109,12 +109,24 @@
             <div class="PortfolioBox">
                 <div class="imgHolder">
                     <img src="./picture/img1.jpg" alt="">
+                    <div class="mobileIcon viewBehance">
+                        <span>View on Behance</span>
+                        <img src="./picture/Vector (3).png" alt="">
+                    </div>
                 </div>
                 <div class="imgHolder">
                     <img src="./picture/img3.jpg" alt="">
+                    <div class="mobileIcon viewBehance">
+                        <span>View on Behance</span>
+                        <img src="./picture/Vector (3).png" alt="">
+                    </div>
                 </div>
                 <div class="imgHolder">
                     <img src="./picture/img5.jpg" alt="">
+                    <div class="mobileIcon viewBehance">
+                        <span>View on Behance</span>
+                        <img src="./picture/Vector (3).png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -147,10 +159,10 @@
                     <img src="./picture/Vector-2.png"/>
                     <img src="./picture/Vector-3.png"/>
                 </div>
-                <div class="toTop">
+                <a href="#top" class="toTop">
                     <span>Back to top</span>
                     <img src="./picture/Vector (2).png" alt="">
-                </div>
+                </a>
             </div>
         </footer>
     </div>
